[gd_scene load_steps=25 format=3 uid="uid://epcft57bko11"]

[ext_resource type="Script" path="res://Scripts/elevator.gd" id="1_h2xjb"]
[ext_resource type="Texture2D" uid="uid://dqmibw0xa74kj" path="res://Assets/testelevator.png" id="2_4bd75"]
[ext_resource type="Texture2D" uid="uid://e35oynjf80o" path="res://Assets/blackbackground.png" id="2_d6vv6"]
[ext_resource type="Texture2D" uid="uid://1avx083msf3o" path="res://Assets/elevatorclosed.png" id="3_qkckk"]
[ext_resource type="Texture2D" uid="uid://bk5oek8q2a6on" path="res://Assets/elevatoropen.png" id="4_2jbah"]
[ext_resource type="Texture2D" uid="uid://bn2dp3t3nmju0" path="res://Assets/elevatoropening3.png" id="5_7v4of"]
[ext_resource type="Texture2D" uid="uid://svoxalymdpbw" path="res://Assets/elevatoropening2.png" id="6_lbe4m"]
[ext_resource type="Texture2D" uid="uid://drt26vsbg05st" path="res://Assets/elevatoropening1.png" id="7_dp0hk"]
[ext_resource type="AudioStream" uid="uid://b7n8tmlh6xvox" path="res://Audio/elevator-ding-pixabay.mp3" id="9_rq7u0"]
[ext_resource type="AudioStream" uid="uid://crgyy1nb8m3ea" path="res://Audio/elevator-sound-pixabay.mp3" id="10_500ek"]
[ext_resource type="AudioStream" uid="uid://dsdtvrw36yuho" path="res://Audio/button_sound.mp3" id="11_82mof"]
[ext_resource type="AudioStream" uid="uid://bmfiibxrhk24q" path="res://Audio/elevator-open-pixabay.mp3" id="12_nxfkk"]
[ext_resource type="AudioStream" uid="uid://cfstuit2e86dr" path="res://Audio/elevator-close2-pixabay.mp3" id="13_8y1xr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_iolk1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qkckk")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_2jbah")
}, {
"duration": 1.0,
"texture": ExtResource("5_7v4of")
}, {
"duration": 1.0,
"texture": ExtResource("6_lbe4m")
}, {
"duration": 1.0,
"texture": ExtResource("7_dp0hk")
}, {
"duration": 1.0,
"texture": ExtResource("3_qkckk")
}],
"loop": false,
"name": &"closing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_2jbah")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qkckk")
}, {
"duration": 1.0,
"texture": ExtResource("7_dp0hk")
}, {
"duration": 1.0,
"texture": ExtResource("6_lbe4m")
}, {
"duration": 1.0,
"texture": ExtResource("5_7v4of")
}, {
"duration": 1.0,
"texture": ExtResource("4_2jbah")
}],
"loop": false,
"name": &"opening",
"speed": 5.0
}]

[sub_resource type="CanvasTexture" id="CanvasTexture_k7be2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qyomb"]
size = Vector2(397, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sw3ib"]
size = Vector2(396.5, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ua3s8"]
size = Vector2(601, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xu1jp"]
size = Vector2(599, 1079)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1y1he"]
size = Vector2(717, 312)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knfrd"]
size = Vector2(718, 211)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eb4vw"]
size = Vector2(166.5, 179)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lppn"]
size = Vector2(152, 177)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ui1q"]
size = Vector2(85, 13)

[node name="Elevator" type="Node2D"]
script = ExtResource("1_h2xjb")

[node name="BlackBackground" type="Sprite2D" parent="."]
position = Vector2(-73, -70)
scale = Vector2(1.03667, 1.09643)
texture = ExtResource("2_d6vv6")
centered = false

[node name="ElevatorBackground" type="Sprite2D" parent="."]
texture = ExtResource("2_4bd75")
centered = false

[node name="ElevatorSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(968, 301)
sprite_frames = SubResource("SpriteFrames_iolk1")
animation = &"closing"
frame = 4
frame_progress = 1.0

[node name="ElevatorButtonSprite0" type="Sprite2D" parent="."]
visible = false
position = Vector2(1210.03, 321.062)
scale = Vector2(9.93753, 9.87503)
texture = SubResource("CanvasTexture_k7be2")

[node name="ElevatorButtonSprite1" type="Sprite2D" parent="."]
visible = false
position = Vector2(1224, 321)
scale = Vector2(10, 10)
texture = SubResource("CanvasTexture_k7be2")

[node name="ElevatorButtonSprite2" type="Sprite2D" parent="."]
visible = false
position = Vector2(1209.94, 334.063)
scale = Vector2(-10, 10.125)
texture = SubResource("CanvasTexture_k7be2")

[node name="ElevatorButtonSprite3" type="Sprite2D" parent="."]
visible = false
position = Vector2(1224, 334)
scale = Vector2(10, 10)
texture = SubResource("CanvasTexture_k7be2")

[node name="ElevatorArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorArea2D"]
position = Vector2(968, 272)
shape = SubResource("RectangleShape2D_qyomb")

[node name="ElevatorBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorBody2D"]
position = Vector2(968, 299)
shape = SubResource("RectangleShape2D_sw3ib")

[node name="BoundaryBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(301.5, 539)
shape = SubResource("RectangleShape2D_ua3s8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(1619.5, 539.5)
shape = SubResource("RectangleShape2D_xu1jp")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(961.5, 155)
shape = SubResource("RectangleShape2D_1y1he")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(961, 974.5)
shape = SubResource("RectangleShape2D_knfrd")

[node name="WallBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(685.75, 299.5)
shape = SubResource("RectangleShape2D_eb4vw")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(1243, 300.5)
shape = SubResource("RectangleShape2D_4lppn")

[node name="ElevatorButtonArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorButtonArea2D"]
position = Vector2(1218.5, 395.5)
shape = SubResource("RectangleShape2D_4ui1q")

[node name="ElevatorTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ElevatorPanel" type="Panel" parent="."]
visible = false
offset_left = 1334.0
offset_top = 211.0
offset_right = 1516.0
offset_bottom = 486.0

[node name="VBoxContainer" type="VBoxContainer" parent="ElevatorPanel"]
layout_mode = 0
offset_right = 183.0
offset_bottom = 273.0

[node name="Button0" type="Button" parent="ElevatorPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Lobby"

[node name="Button1" type="Button" parent="ElevatorPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "1st Floor"

[node name="Button2" type="Button" parent="ElevatorPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "2nd Floor"

[node name="Button3" type="Button" parent="ElevatorPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "3rd Floor"

[node name="ElevatorLabel" type="Label" parent="."]
offset_left = 1211.0
offset_top = 222.0
offset_right = 1221.0
offset_bottom = 245.0

[node name="ElevatorDingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_rq7u0")

[node name="ElevatorAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_500ek")
volume_db = 4.0

[node name="ButtonPressAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_82mof")
volume_db = 4.0

[node name="ElevatorOpenAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_nxfkk")
volume_db = -4.0

[node name="ElevatorCloseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_8y1xr")

[connection signal="animation_finished" from="ElevatorSprite" to="." method="_on_elevator_sprite_animation_finished"]
[connection signal="body_entered" from="ElevatorArea2D" to="." method="_on_elevator_area_2d_body_entered"]
[connection signal="body_entered" from="ElevatorButtonArea2D" to="." method="_on_elevator_button_area_2d_body_entered"]
[connection signal="body_exited" from="ElevatorButtonArea2D" to="." method="_on_elevator_button_area_2d_body_exited"]
[connection signal="timeout" from="ElevatorTimer" to="." method="_on_elevator_timer_timeout"]
[connection signal="pressed" from="ElevatorPanel/VBoxContainer/Button0" to="." method="_on_button_0_pressed"]
[connection signal="pressed" from="ElevatorPanel/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="ElevatorPanel/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ElevatorPanel/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
